--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>11.6</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="board" class="board">
-            <div class="hello">
+            <div class="nav">
                 <h1 class="title">Kanban board</h1>
                 <button class="create-column">Add a column</button>
             </div>
             <div class="column-container"></div>
         </div>
-        <script src="jquery-3.2.1.min.js"></script>
-        <script src="jquery-ui.min.js"></script>
+        <script src="vendors/jquery-3.2.1.min.js"></script>
+        <script src="vendors/jquery-ui.min.js"></script>
         <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
